# RubiksCubeSolver

./: BFSSolver.cpp  BFSSolver.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  IDDFSSolver.cpp  IDDFSSolver.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  README.md  RubiksCube.cpp  RubiksCube.h  RubiksCube3darr.cpp  RubiksCube3darr.h  main.cpp  math.cpp  math.h
